--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,51 @@
 async-generator==1.10
 attrs==21.4.0
 backports.functools-lru-cache==1.6.4
+beautifulsoup4==4.10.0
 certifi==2021.10.8
 cffi==1.15.0
+chardet==4.0.0
 charset-normalizer==2.0.12
 colorama==0.4.4
 configparser==5.2.0
 crayons==0.4.0
 cryptography==36.0.2
+cssutils==2.4.0
+currency-symbols==2.0.1
+et-xmlfile==1.1.0
+fonttools==4.30.0
 future==0.18.2
 h11==0.13.0
 idna==3.3
+lml==0.1.0
+openpyxl==3.0.9
 outcome==1.1.0
+Pillow==9.0.1
 pycparser==2.21
+pyexcel==0.7.0
+pyexcel-io==0.6.6
+pyexcel-xls==0.7.0
+pyexcel-xlsx==0.6.0
 pyOpenSSL==22.0.0
 PySocks==1.7.1
+python-dateutil==2.8.2
+pywin32==303
+PyYAML==6.0
 requests==2.27.1
 selene==1.0.2
 selenium==4.1.3
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
+soupsieve==2.3.1
+texttable==1.6.4
 trio==0.20.0
 trio-websocket==0.9.2
 urllib3==1.26.8
+webcolors==1.11.1
 webdriver-manager==3.5.3
 wsproto==1.1.0
-
-pyexcel~=0.7.0
+xlrd==2.0.1
+xls2xlsx==0.1.5
+xlutils==2.0.0
+xlwt==1.3.0
